# Defense-CAD

./: .firebaserc  .gitignore  ACCURACY_AND_LIMITATIONS_CAD.md  ADDITIONAL_CONTRACTORS_SETUP.md  AMERICAN_INTEGRATED_LINK.md  AVIC_CONTRACTOR_SETUP.md  B21_RAIDER_CAD_ANALYSIS.md  BVR_PRECISION_EXTENSION.md  CAD.md  CAD_ACCURACY_REPORT.md  CASC_CONTRACTOR_SETUP.md  CASIC_CONTRACTOR_SETUP.md  CHINA_2025_MILITARY_PARADE_SYSTEMS.md  CHINESE_INTEGRATED_KILL_CHAIN.md  CICD_VERIFICATION_2025-12-30.md  CICD_WORKFLOW_COMPLIANCE_REPORT.md  CONTRACTOR_USABILITY_VERIFICATION.md  COST_BENEFIT_ANALYSIS.md  DEFENSE_CONTRACTOR_INTEGRATION.md  DOD_STRATEGY_OSINT.md  DOD_SYSTEM_PROPOSALS_CAD_OUTPUT.md  EW_ACTIONABLE_STRATEGY.md  F22_RAPTOR_CAD_ANALYSIS.md  F35_INTEGRATED_OPERATIONS.md  FORD_CLASS_CAD_ANALYSIS.md  HARDWARE_SPECIFICATIONS.md  HARDWARE_VERIFICATION.md  HARDWARE_VERIFICATION_CAD.md  IMPLEMENTATION_README.md  IMPLEMENTATION_SUMMARY.md  INFORMATION_CHAIN_ROBUSTNESS.md  INTEGRATION_SHORTCOMINGS.md  J20_INTEGRATED_OPERATIONS.md  LEGAL_DISCLAIMER.md  LICENSE  LOCKHEED_CONTRACTOR_SETUP.md  METHODOLOGY.md  NORTHROP_GRUMMAN_CONTRACTOR_SETUP.md  OHIO_CLASS_CAD_ANALYSIS.md  OPERATIONAL_CORRECTNESS.md  (+111 more)
.firebase/: hosting.d2ViL2Rpc3Qvd2ViL2Jyb3dzZXI.cache
.github/workflows/: ci.yml  update-cost-data.yml
analysis_output/: carrier_strike_log.txt  carrier_strike_report.md  carrier_strike_results.json  df17_kill_chain_log.txt  df17_kill_chain_report.md  df17_kill_chain_results.json  f35_infrastructure_report.md  f35_infrastructure_results.json  f35_kill_chain_log.txt  f35_kill_chain_report.md  f35_kill_chain_results.json  threat_analysis_log.txt  threat_analysis_report.md  threat_analysis_report.txt  threat_analysis_results.json
cancer-core-agentic-framework/: .gitignore
cancer-core-agentic-framework/.github/ISSUE_TEMPLATE/: patient-matching-request.yml
cancer-core-agentic-framework/.github/workflows/: ci.yml  clinical-trial-search.yml  fda-verification.yml  patient-matching.yml  protocol-generator.yml  publish.yml  research-updates.yml
cicd_logs/: summary_20260115_192554.json  validations_20260115_192554.json
cicd_reports/: cicd_report_20260125_063007.json  cicd_report_20260125_063021.json
data/: fact_checks.json  proposed_systems.json
docs/: DISCLAIMER.md  METHODOLOGY.md  PARAMETER_ESTIMATES.md  VERIFIED_MODELS_REGISTRY.md
docs/analysis/: DDG51_ARLEIGH_BURKE.md  F35_AIM260.md
docs/hardware/: REAL_HARDWARE_SPECIFICATIONS.md
docs/physics/: BVR_PRECISION.md  FAINT_EMISSION_DETECTION.md  RCS_ASPECT_DEPENDENCE.md
golden_fleet_cruiser_proposal/: ARMAMENT_SYSTEMS.md  ELECTRICAL_ENGINEERING_SPECS.md  HEAVY_CRUISER_PROPOSAL.md  MECHANICAL_ENGINEERING_SPECS.md  README.md  SHIPYARD_MANUFACTURING_PACKAGE.md  armament_model.py  lsc_x_model.py  test_armament_model.py  test_lsc_x_model.py
ios/: .gitignore  Package.swift  README.md
ios/GoldenFleet/: GoldenFleetApp.swift  Info.plist
ios/GoldenFleet/Models/: SimulationManager.swift  ThemeManager.swift
ios/GoldenFleet/Views/: AnalyticsView.swift  ContactView.swift  ContentView.swift  SettingsView.swift  WarRoomView.swift  WebSimulatorView.swift
osint_cad/: __init__.py
osint_cad/analysis/: __init__.py  cad_derived.py  calculators.py  missile_defense.py  radar_coverage.py
osint_cad/doctrine/: __init__.py  _base.py  cost_benefit.py  hard_facts.py
osint_cad/doctrine/dod/: __init__.py  strategy.py
osint_cad/doctrine/pla/: __init__.py  strategy.py
osint_cad/engagements/: __init__.py  carrier_strike_kill_chain.py  comprehensive_threat_analysis.py  df17_engagement_simulation.py  df17_hypersonic_kill_chain.py  ew_strategy.py  f35_defensive_vs_pl15.py  f35_infrastructure_strike.py  f35_integrated_kill_chain.py  f35_kill_chain_vs_j20.py  information_chain_robustness.py  integrated_kill_chain_cad.py  integrated_kill_system.py  lrhw_engagement_simulation.py  operational_simulation.py  sead_engagement_simulation.py
osint_cad/geometry/: __init__.py  cad_rcs_calculator.py  cad_sensitivity_analysis.py  cad_trajectory_export.py  cad_visualization.py
osint_cad/physics/: __init__.py  rf_propagation.py  vlbi_coherent_processing.py
osint_cad/sensors/: __init__.py  adaptive_antenna_ep.py  advanced_tracking.py  datalink_protocol.py  eob_database.py  f22_radar_model.py  iterative_classifier.py  j20_radar_model.py  visualization.py
osint_cad/targeting/: __init__.py  aim260_targeting_model.py  df17_hgv_model.py  precision_ballistic_missiles.py
osint_cad/util/: __init__.py  cad_cicd_logging.py
reasoning_chains/: README.md  j20_aesa_element_count.yaml  madl_detection_range.yaml  madl_sidelobe_level.yaml  madl_tx_power.yaml  pl15_nez_range.yaml  schema.yaml  validate.py
scripts/: cad_analysis.py  decrypt-repo.sh  encrypt-repo.sh  ew_strategy_analysis.py  export_parity.py  export_web_data.py  hardware_compatibility_test.py  run_algorithm_documentation.py  run_all_system_proposals.py  run_calculations_with_logging.py  run_integrated_kill_chain.py  run_kill_chain_simulation.py  simulation.py  strategy_reference.py  update_cost_data.py  validate_simulation_accuracy.py  verify_facts.py
tests/: test_analysis.py  test_cad_derived.py  test_cad_modules.py  test_calculators.py  test_defensive_cad_missiles.py  test_df17_carrier_strike_integration.py  test_df17_hypersonic.py  test_doctrine.py  test_f35_ew_kill_chain.py  test_facts.py  test_information_chain_robustness.py  test_physics_calculations.py  test_physics_fixes.py  test_pla_cad.py  test_pla_vs_dod_cad.py  test_pretrained_models.py  test_sead_ballistic_missiles.py  test_type052d_cad.py
web/: .firebaserc  angular.json  firebase.json  firestore.rules  package-lock.json  package.json  parity-check.mjs
web/.firebase/: hosting.ZGlzdC93ZWIvYnJvd3Nlcg.cache
web/functions/: package-lock.json  package.json
web/functions/src/: index.ts
web/public/: manifest.webmanifest
web/public/data/: cad_derived.json  cost_benefit.json  doctrine.json  ew_strategy.json  parity.json
web/src/: index.html  main.ts  styles.scss
web/src/app/: analytics.service.ts  app.component.html  app.component.scss  (+16 more)
(+26 files in other folders)
